kube/services/auspice/auspice-service-elb.yaml
kind: Service
apiVersion: v1
metadata:
  name: auspice-service-elb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: see-kube-setup-auspice
    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: "ELBSecurityPolicy-TLS-1-2-2017-01"
spec:
  selector:
    app: auspice
  ports:
    - protocol: TCP
      port: 443
      targetPort: 4000
      name: https
  type: LoadBalancer
