kube/services/auspice/auspice-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: auspice-service
spec:
  selector:
    app: auspice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000 
      name: http
  type: NodePort
